fix: Prescription DB columns + @JsonNaming + doctorId auto-fill
DB fixes:
- visit_type: ENUM → VARCHAR(16)
- status: ENUM → VARCHAR(16) (dropped mv_daily_revenue, mv_doctor_performance)
- items: JSONB → TEXT (dropped GIN index)

Code fixes:
- SaveRequest: added @JsonNaming(SnakeCaseStrategy.class)
- PrescriptionController: doctorId/clinicId auto-fill from JWT headers
- PrescriptionService: stubbed incompatibility checks (entity mismatch pending)

Remaining: fix Prescription.getStatus() / StatusTransition.getStatus() entity bugs